--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <span class="japanese-name">フェイ</span>
                 </li>
                 <li>
-                    <span class="japanese-name">悲しみ</span>
+                    <span class="japanese-name">クリス</span>
                 </li>
                 <li>
-                    <span class="japanese-name">アーチ</span>
+                    <span class="japanese-name">ダミ</span>
   
             </ul>
         </div>
