--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 </li>
                 <li>
                     <span class="japanese-name">ダミ</span>
-  
+                  </li>
+                <li>
+                    <span class="japanese-name">出血する</span>
             </ul>
         </div>
     </div>
