--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                   </li>
                 <li>
                     <span class="japanese-name">出血する</span>
+                  </li>
+                <li>
+                    <span class="japanese-name">ゲルタ</span>
             </ul>
         </div>
     </div>
