--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fucked by hellhound</title>
+    <title>burnburnburn</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta content='https://media.discordapp.net/attachments/1193394000661577729/1219569824338804777/DSbcmsAV4AACip2.jpg?ex=660bc7e8&is=65f952e8&hm=4d79f8ed21b6fba1b7192c3eda3186716112f8c4ec908a2dc8efab56da5689e1&=&format=webp&width=676&height=676' property='og:image'>
